Спагетти код разбит на модули

--- a/index.html
+++ b/index.html
@@ -279,7 +279,12 @@
     <button type="button" class="map__pin" style="left: 200px; top: 400px;"><img src="img/avatars/user07.png" width="40" height="40" draggable="false" alt="Метка объявления"></button>
   </template>
 
+  <script src="js/utils.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/pin.js"></script>
+  <script src="js/card.js"></script>
   <script src="js/map.js"></script>
+  <script src="js/form.js"></script>
 
 </body>
 </html>
