Настроен фильтр, но не открываются карточки

--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
   <script src="js/utils.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/response.js"></script>
+  <script src="js/filter.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
   <script src="js/map.js"></script>
